--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,20 +1,32 @@
-name: sbom-generation
+name: SBOM Generation
 
-on: push
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   sbom:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Generate SBOM
-        uses: anchore/syft-action@v1
+      - name: Install Syft
+        uses: anchore/syft-action@v0.16.0
         with:
-          output: sbom.spdx
+          # Scan the working directory (source code and manifests)
+          source: "."
 
-      - name: Upload SBOM
+      - name: Generate SBOM (SPDX JSON)
+        run: |
+          syft . -o spdx-json=sbom.spdx.json
+
+      - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-report
-          path: sbom.spdx
+          name: sbom-spdx-json
+          path: sbom.spdx.json
+          retention-days: 7
